# FlaskAPI

./: .gitignore  app.py  config.py  dummy_script.py  extensions.py  pyproject.toml  tempCodeRunnerFile.py
api/: views.py
api/resources/: user.py
api/schemas/: user.py
auth/: decorators.py  helpers.py  views.py
migrations/versions/: 4dce3b69034b_.py  91a6f7cb3a51_initial_migrate.py  a587e79e27bd_.py  fd86e684bc57_.py
models/: __init__.py  auth.py  user.py
